--- a/emagazine.css
+++ b/emagazine.css
@@ -65,7 +65,24 @@ body{
     box-sizing: border-box;
 }
 
+.img-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    overflow: hidden;
+
+}
+
+.grid-pics{
+    display:grid;
+    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(400px,1fr) );
+}
+
 .card{
+    display: grid;
+    align-items: stretch;
     text-align: center;
     background-color: #A7BC5B;
     height: 500px;
@@ -77,8 +94,9 @@ h5{
     text-decoration: underline;
 }
 
-.grid-pics{
-    display:grid;
-    gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(400px,1fr) );
+@media (max-width:420px){
+    .grid-pics{
+        grid-template-columns: auto;
+    }
 }
+
