--- a/page4.css
+++ b/page4.css
@@ -1,72 +1,84 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: sans-serif;
-}
-.container{
-    display: grid;
-    grid-template-areas: 
-    "nav"
-    "container"
-    "footer";
-    grid-template-rows: 1fr 1fr 1fr;
-}
-nav{
-    background-color: #A7BC5B;
-    grid-area: nav;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
 }
 
-.navbar-brand{
-    text-transform: uppercase;
-    text-decoration-line: underline;
-    color: black;
-    font-size: 26px;
+nav {
+  background-color: #a7bc5b;
+  grid-area: nav;
 }
 
-.nav ul li a{
-    font-size: 24px;
-    margin: auto;
-    color: white;
+.navbar-brand {
+  text-transform: uppercase;
+  text-decoration-line: underline;
+  color: black;
+  font-size: 26px;
 }
 
-.nav ul li a:hover{
-    color: white;
+.nav ul li a {
+  font-size: 24px;
+  margin: auto;
+  color: white;
 }
 
-.content1{
-    text-align: center;
-    grid-area: content1;
+.nav ul li a:hover {
+  color: white;
 }
 
-.footer{
-    background-color: #8DA242;
-    padding: 10px;
-    clear: both;
-    text-align: center;
-    grid-area: footer;
+.content1 {
+  text-align: center;
+  grid-area: content1;
 }
 
-body{
-    background-color: #FFFFFF;
-    box-sizing: border-box;
+.footer {
+  background-color: #8da242;
+  padding: 10px;
+  clear: both;
+  text-align: center;
+  grid-area: footer;
 }
 
-.card{
-    grid-area: card;
-    text-align: center;
+body {
+  background-color: #ffffff;
+  box-sizing: border-box;
 }
 
-.img-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 250px;
-    overflow: hidden;
-
+.card-img {
+  border: #a7bc5b solid 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 600px;
 }
 
-.shop-pics{
-    display:grid;
-    gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(400px,1fr) );
+.shop-pics {
+  display: grid;
+  gap: 20px;
+  padding: 20px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.img-container {
+  height: 400px;
+  overflow: hidden;
+}
+
+.card-img-top {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+@media (max-width: 990px) {
+  .shop-pics {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
